just changed the static file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Demo Page</title>
 </head>
 <body>
-    <h1>Hello DevOps World! 🚀</h1>
+    <h1>good evening  DevOps World! 🚀</h1>
     <p>Ceci est une page statique servie par Spring Boot</p>
     <img src="https://cdn-icons-png.flaticon.com/512/919/919847.png" width="100" alt="Java logo">
 </body>
